After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700767 - dir-project: Fix compiler warning
dir-project: Fix compiler warning
Status: RESOLVED FIXED
Product: anjuta
Classification: Applications
Component: unknown
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Anjuta maintainers
Anjuta maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-21 08:55 UTC by Kalev Lember
Modified: 2013-05-26 13:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dir-project: Fix compiler warning (844 bytes, patch)
2013-05-21 08:57 UTC, Kalev Lember
committed Details | Review

Description Kalev Lember 2013-05-21 08:55:01 UTC
In 3.8.3, after the fix from https://git.gnome.org/browse/anjuta/commit/?id=15d803e41f5750dddb89bc0b91a954ba5e3fc52d , the build now fails on i686 with:

dir-project.c: In function 'dir_pattern_new':
dir-project.c:271:4: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'int' [-Werror=format=]
    g_string_append_printf (regex, "(.{%ld})", ptr - next);
    ^
cc1: some warnings being treated as errors
Comment 1 Kalev Lember 2013-05-21 08:57:08 UTC
Created attachment 244902 [details] [review]
dir-project: Fix compiler warning
Comment 2 Sébastien Granjoux 2013-05-21 19:36:04 UTC
Review of attachment 244902 [details] [review]:

Thank you, I have committed this fix in both master and gnome-3-8 branch.
Comment 3 Sébastien Granjoux 2013-05-26 13:23:32 UTC
We have planned a release 3.8.4 next week including this fix.