dir-project: Fix compiler warning

https://bugzilla.gnome.org/show_bug.cgi?id=700767